content/docs/core/1.2.0/reference/vendr-core-composing/compositionextensions.md
---
title: CompositionExtensions
description: API reference for CompositionExtensions in Vendr, the eCommerce solution for Umbraco v8+
---
## CompositionExtensions

```csharp
public static class CompositionExtensions
```

**Namespace**
* [Vendr.Core.Composing](../)

### Methods

#### WithCalculateOrderDiscountedPricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderDiscountedPricesPipeline, OrderCalculation> 
    WithCalculateOrderDiscountedPricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderGiftCardsPipeline

```csharp
public static PipelineBuilder<CalculateOrderGiftCardsPipeline, OrderCalculation> 
    WithCalculateOrderGiftCardsPipeline(this Composition composition)
```


---

#### WithCalculateOrderLineDiscountedPricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderLineDiscountedPricesPipeline, OrderLineCalculation> 
    WithCalculateOrderLineDiscountedPricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderLinePricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderLinePricesPipeline, OrderLineCalculation> 
    WithCalculateOrderLinePricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderLineTaxRatesPipeline

```csharp
public static PipelineBuilder<CalculateOrderLineTaxRatesPipeline, OrderLineCalculation> 
    WithCalculateOrderLineTaxRatesPipeline(this Composition composition)
```


---

#### WithCalculateOrderPipeline

```csharp
public static PipelineBuilder<CalculateOrderPipeline, OrderCalculation> WithCalculateOrderPipeline(
    this Composition composition)
```


---

#### WithCalculateOrderPricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderPricesPipeline, OrderCalculation> 
    WithCalculateOrderPricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderTaxRatesPipeline

```csharp
public static PipelineBuilder<CalculateOrderTaxRatesPipeline, OrderCalculation> 
    WithCalculateOrderTaxRatesPipeline(this Composition composition)
```


---

#### WithCalculateOrderTotalPricePipeline

```csharp
public static PipelineBuilder<CalculateOrderTotalPricePipeline, OrderCalculation> 
    WithCalculateOrderTotalPricePipeline(this Composition composition)
```


---

#### WithInitStorePipeline

```csharp
public static PipelineBuilder<InitStorePipeline, Store> WithInitStorePipeline(
    this Composition composition)
```


---

#### WithLimitOrderDiscountsPipeline

```csharp
public static PipelineBuilder<LimitOrderDiscountsPipeline, OrderCalculation> 
    WithLimitOrderDiscountsPipeline(this Composition composition)
```


---

#### WithLimitOrderLineDiscountsPipeline

```csharp
public static PipelineBuilder<LimitOrderLineDiscountsPipeline, OrderLineCalculation> 
    WithLimitOrderLineDiscountsPipeline(this Composition composition)
```


---

#### WithNotificationEvent&lt;TEvent&gt;

```csharp
public static VendrEventHandlerComposer<TEvent, INotificationEvent> WithNotificationEvent<TEvent>(
    this Composition composition)
    where TEvent : INotificationEvent
```


---

#### WithPipeline&lt;TCollection,TItem&gt;

```csharp
public static PipelineBuilder<TCollection, TItem> WithPipeline<TCollection, TItem>(
    this Composition composition)
    where TCollection : class, IPipelineTaskCollection<TItem>
```


---

#### WithSendEmailPipeline

```csharp
public static PipelineBuilder<SendEmailPipeline, EmailContext> WithSendEmailPipeline(
    this Composition composition)
```


---

#### WithValidationEvent&lt;TEvent&gt;

```csharp
public static VendrEventHandlerComposer<TEvent, IValidationEvent> WithValidationEvent<TEvent>(
    this Composition composition)
    where TEvent : IValidationEvent
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
