content/docs/core/1.4.0/reference/vendr-core-composing/compositionextensions.md
---
title: CompositionExtensions
description: API reference for CompositionExtensions in Vendr, the eCommerce solution for Umbraco v8+
---
## CompositionExtensions

```csharp
public static class CompositionExtensions
```

**Namespace**
* [Vendr.Core.Composing](../)

### Methods

#### WithAmountAdjusters

```csharp
public static AmountAdjusterCollectionBuilder WithAmountAdjusters(this Composition composition)
```


---

#### WithCalculateOrderAdjustedPricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderAdjustedPricesPipeline, OrderCalculation> 
    WithCalculateOrderAdjustedPricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderAdjustedTransactionAmountPipeline

```csharp
public static PipelineBuilder<CalculateOrderAdjustedTransactionAmountPipeline, OrderCalculation> 
    WithCalculateOrderAdjustedTransactionAmountPipeline(this Composition composition)
```


---

#### WithCalculateOrderLineAdjustedPricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderLineAdjustedPricesPipeline, OrderLineCalculation> 
    WithCalculateOrderLineAdjustedPricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderLinePricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderLinePricesPipeline, OrderLineCalculation> 
    WithCalculateOrderLinePricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderLineTaxRatesPipeline

```csharp
public static PipelineBuilder<CalculateOrderLineTaxRatesPipeline, OrderLineCalculation> 
    WithCalculateOrderLineTaxRatesPipeline(this Composition composition)
```


---

#### WithCalculateOrderPipeline

```csharp
public static PipelineBuilder<CalculateOrderPipeline, OrderCalculation> WithCalculateOrderPipeline(
    this Composition composition)
```


---

#### WithCalculateOrderPricesPipeline

```csharp
public static PipelineBuilder<CalculateOrderPricesPipeline, OrderCalculation> 
    WithCalculateOrderPricesPipeline(this Composition composition)
```


---

#### WithCalculateOrderTaxRatesPipeline

```csharp
public static PipelineBuilder<CalculateOrderTaxRatesPipeline, OrderCalculation> 
    WithCalculateOrderTaxRatesPipeline(this Composition composition)
```


---

#### WithCalculateOrderTotalPricePipeline

```csharp
public static PipelineBuilder<CalculateOrderTotalPricePipeline, OrderCalculation> 
    WithCalculateOrderTotalPricePipeline(this Composition composition)
```


---

#### WithCalculateOrderTotalTransactionAmountPipeline

```csharp
public static PipelineBuilder<CalculateOrderTotalTransactionAmountPipeline, OrderCalculation> 
    WithCalculateOrderTotalTransactionAmountPipeline(this Composition composition)
```


---

#### WithCalculateOrderTransactionAmountPipeline

```csharp
public static PipelineBuilder<CalculateOrderTransactionAmountPipeline, OrderCalculation> 
    WithCalculateOrderTransactionAmountPipeline(this Composition composition)
```


---

#### WithInitStorePipeline

```csharp
public static PipelineBuilder<InitStorePipeline, Store> WithInitStorePipeline(
    this Composition composition)
```


---

#### WithLimitOrderDiscountsPipeline

```csharp
public static PipelineBuilder<LimitOrderDiscountsPipeline, OrderCalculation> 
    WithLimitOrderDiscountsPipeline(this Composition composition)
```


---

#### WithNotificationEvent&lt;TEvent&gt;

```csharp
public static VendrEventHandlerComposer<TEvent, INotificationEvent> WithNotificationEvent<TEvent>(
    this Composition composition)
    where TEvent : INotificationEvent
```


---

#### WithOrderFinders

```csharp
public static OrderFinderCollectionBuilder WithOrderFinders(this Composition composition)
```


---

#### WithPipeline&lt;TCollection,TItem&gt;

```csharp
public static PipelineBuilder<TCollection, TItem> WithPipeline<TCollection, TItem>(
    this Composition composition)
    where TCollection : class, IPipelineTaskCollection<TItem>
```


---

#### WithPriceAdjusters

```csharp
public static PriceAdjusterCollectionBuilder WithPriceAdjusters(this Composition composition)
```


---

#### WithRegisteredCustomerInfoProviders

```csharp
public static RegisteredCustomerInfoProviderCollectionBuilder WithRegisteredCustomerInfoProviders(
    this Composition composition)
```


---

#### WithSendEmailPipeline

```csharp
public static PipelineBuilder<SendEmailPipeline, EmailContext> WithSendEmailPipeline(
    this Composition composition)
```


---

#### WithValidationEvent&lt;TEvent&gt;

```csharp
public static VendrEventHandlerComposer<TEvent, IValidationEvent> WithValidationEvent<TEvent>(
    this Composition composition)
    where TEvent : IValidationEvent
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
